add  search by cep

--- a/index.html
+++ b/index.html
@@ -42,12 +42,16 @@
                     <input type="hidden" name="zipCodeId" class="text-input" value="">
 
                     <div class="second-step">
-                        <button color="red" class="btn-sucess">Confirmar</button>
+                        <button id="teste" color="red" class="btn-sucess">Confirmar</button>
                     </div>
                 </div>
             </form>
         </div>
     </div>
+    <script src="jquery-3.5.1.js" ></script>
+    <script src="main.js" ></script>
+
+    <link rel="stylesheet" type="text/css" href="style.css">
 </body>
 
 </html>
