--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Mocal Localização</title>
         <script src="https://kit.fontawesome.com/290df5bba9.js" crossorigin="anonymous"></script>
-            <link rel="stylesheet" type="text/css" href="style.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>      
+        <link rel="stylesheet" type="text/css" href="./style.css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script> 
+        <script src="./main.js"></script>        
     </head>
 
     <body>
@@ -27,20 +28,43 @@
                         <p class="modal-text">
                             Dessa forma você terá acesso aos produtos e ofertas da sua região.
                         </p>
-                        <!--<span class="geolocation-link">
-                            <i class="fas fa-map-marker-alt"></i> Utilizar localização automática
-                        </span> -->
-                            <span class="modal-text">Você também pode:</span>
                         <div class="region-select">
-                            <input type="text" name="city" placeholder="Digitar o nome da cidade" class="text-input" 
-                            value="">
+                            <select name="state" id="stateForm">
+                                <option value="">Selecione o Estado</option>
+                                <option value="AC">Acre</option>
+                                <option value="AL">Alagoas</option>
+                                <option value="AP">Amapá</option>
+                                <option value="AM">Amazonas</option>
+                                <option value="BA">Bahia</option>
+                                <option value="CE">Ceará</option>
+                                <option value="DF">Distrito Federal</option>
+                                <option value="ES">Espírito Santo</option>
+                                <option value="GO">Goiás</option>
+                                <option value="MA">Maranhão</option>
+                                <option value="MT">Mato Grosso</option>
+                                <option value="MS">Mato Grosso do Sul</option>
+                                <option value="MG">Minas Gerais</option>
+                                <option value="PA">Pará</option>
+                                <option value="PB">Paraíba</option>
+                                <option value="PR">Paraná</option>
+                                <option value="PE">Pernambuco</option>
+                                <option value="PI">Piauí</option>
+                                <option value="RJ">Rio de Janeiro</option>
+                                <option value="RN">Rio Grande do Norte</option>
+                                <option value="RS">Rio Grande do Sul</option>
+                                <option value="RO">Rondônia</option>
+                                <option value="RR">Roraima</option>
+                                <option value="SC">Santa Catarina</option>
+                                <option value="SP">São Paulo</option>
+                                <option value="SE">Sergipe</option>
+                                <option value="TO">Tocantins</option>
+                            </select>
                         </div>
                         <span class="modal-text">ou</span>
                         <input type="text" name="zipcode" placeholder="Digitar o CEP" maxlength="9" class="text-input" 
                         value="">
-                        <input type="hidden" name="zipCodeId" class="text-input" value="">
 
-                        <div class="second-step">
+                        <div class="second-step" id="teste">
                             <button color="red" class="btn-sucess">Confirmar</button>
                         </div>
                     </div>
