--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
         <script src="https://kit.fontawesome.com/290df5bba9.js" crossorigin="anonymous"></script>
         <link rel="stylesheet" type="text/css" href="./style.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script> 
-        <script src="./main.js"></script>        
+        <script src="./main.js"></script>
+        <script src="jqueryMask.js" type="text/javascript"></script>
     </head>
 
     <body>
@@ -61,7 +62,7 @@
                             </select>
                         </div>
                         <span class="modal-text">ou</span>
-                        <input type="text" name="zipcode" placeholder="Digitar o CEP" maxlength="9" class="text-input" 
+                        <input type="text" name="zipcode" id="cep" placeholder="Digitar o CEP" maxlength="9" class="text-input"
                         value="">
 
                         <div class="second-step" id="teste">
