--- a/index.html
+++ b/index.html
@@ -12,7 +12,11 @@
     </head>
 
     <body>
-        <div class="container">
+        <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.16/jquery.mask.js"></script>
+        <script>
+            $('input[name="zipcode"]').mask('00000-000');
+        </script>
+        <div class="container" id="page-location">
             <div class="location-wrapper overlay overlay-dark visible">
                 <div class="overlay">
                     <div>
