refactor: styles decoupling

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </head>
 
     <body>
-        <div class="container" id="page-location">
+        <section class="container page-location" id="pageLocation">
             <div class="location-wrapper overlay overlay-dark visible">
                 <div class="overlay">
                     <div>
@@ -32,7 +32,7 @@
                             Defina sua localização:
                         </p>
                         <div class="region-select">
-                            <select name="state" id="stateForm">
+                            <select name="state" class="state-form" id="stateForm">
                                 <option value="">Selecione o Estado</option>
                                 <option value="AC">Acre</option>
                                 <option value="AL">Alagoas</option>
@@ -73,6 +73,6 @@
                     </div>
                 </form>
             </div>
-        </div>
+        </section>
     </body>
 </html>
